# pharma-intelligence

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  explore_punto_farma.py  extract_json.py  main.py  punto_farma_full_json.txt  punto_farma_page_1_response.txt  pyproject.toml  requirements.txt  test_pagination.py  test_pagination_simple.py  test_punto_farma_api.py  test_punto_farma_parse.py  │tee
.actor/: Dockerfile  actor.json  input_schema.json
.actor/farma-oliva/: Dockerfile
.actor/farmacia-catedral/: Dockerfile
.actor/farmacia-center/: Dockerfile
.actor/punto-farma/: Dockerfile  input_schema.json
.github/workflows/: daily-barcode-tracker.yml  scrape-pharmacies.yml
backend/: .env.example  requirements.txt
backend/app/: config.py  dependencies.py  main.py
deploy/: .env.example  bootstrap.sh  healthcheck.sh  update.sh
deploy/logrotate.d/: pharma-scrapers
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
scrapers/: daily_tracker.py  daily_tracker_full.py  farma_oliva.py  farmacia_catedral.py  farmacia_center.py  punto_farma.py
scripts/: check_snapshots.py  cleanup_null_site_code_zombies.py  normalize_categories.py  populate_tracking_urls.py  run_full_scrape.sh  test_tracker.py
sql/: add_product_url_to_snapshots.sql  cleanup_null_site_code_zombies.sql  consumer_platform_setup.sql  create_barcode_tracking_snapshots.sql  create_barcode_tracking_table.sql  fix_log_price_change_security_definer.sql  normalize_categories.sql  truncate_snapshots.sql
storage/: __init__.py  supabase_loader.py
utils/: config.py  logger.py
(+46 files in other folders)
